<resources>
    <string name="app_name">Cronache della GR: Transport 2147</string>
    <string name="img">img</string>
    <string name="errore_terminale_bloccato">ERROR: Terminal locked.</string>
    <string name="errore_parola_gi_scartata">ERROR: Word already discarded.</string>
    <string name="terminal_prompt">ENTER PASSWORD&#8230;</string>
    <string name="terminal_attempts_left">Attempts remaining: </string>
    <string name="terminal_access_granted">ACCESS GRANTED</string>
    <string name="terminal_access_denied_lockout">ACCESS DENIED. Security lockout activated.</string>
    <string name="terminal_access_denied_likeness">Access Denied (%1$d/%2$d correct)</string>
    <string name="terminal_hacks_reset">ATTEMPTS RESTORED.</string>
    <string name="terminal_hacks_dud_removed">DUD REMOVED.</string>
    <string name="terminal_hacks_no_duds">ERROR: No fake words remaining.</string>
    <string name="terminal_hack_found">HACK FOUND</string>
    <string name="appid_transport1533">rpt.games.transport1533</string>
    <string name="button_Donate">Fai una donazione</string>
    <string name="button_GoNavigator">Continua a giocare</string>
    <string name="button_GoNavigatorVanilla">Inizia a giocare al 201</string>
    <string name="button_Intro">Introduzione</string>
    <string name="button_Like">Mi piace…</string>
    <string name="button_ModifySheet">Scheda e Regolamento</string>
    <string name="button_Profiles">Le tue partite</string>
    <string name="button_Remote">Salva partite su Cloud</string>
    <string name="button_Share">Condividi…</string>
    <string name="button_ShareWa">Condividi su WhatsApp</string>
    <string name="button_Tutorial">Tutorial</string>
    <string name="button_assignDamage">Assegna danno a \"%s\"</string>
    <string name="button_endCombat">Finisci il combattimento e riporta i punteggi di EF ed EM sulla scheda</string>
    <string name="button_newRound">Nuovo</string>
    <string name="button_rollDices_1">Tira 1 dado</string>
    <string name="button_rollDices_2">Tira 2 dadi</string>
    <string name="button_rollDices_3">Tira 3 dadi</string>
    <string name="button_rollDices_4">Tira 4 dadi</string>
    <string name="cmp_BtnFontDecrease">DiminuisciFont</string>
    <string name="cmp_BtnFontIncrease">IngrandisciFont</string>
    <string name="dialog_Transport1533IsLive">Il secondo episodio della serie, «Transport1533», è disponibile sul Play Store per essere scaricato e giocato.\n\nSalva le partite in cloud dalla seconda pagina del menu per passarle al secondo episodio.\n\nSeguici sulla nostra pagina Facebook se vuoi essere sicuro di non perderti alcuna novità!</string>
    <string name="dialog_alert">Attenzione!</string>
    <string name="dialog_backToHistory">Torna ai paragrafi visitati</string>
    <string name="dialog_buttonCancel">Annulla</string>
    <string name="dialog_buttonOk">OK</string>
    <string name="dialog_changeDiceRollerTitle">Quanti dadi lanci?</string>
    <string name="dialog_changeGenderTitle">Scegli il genere</string>
    <string name="dialog_changeNameTitle">Scrivi il nuovo nome</string>
    <string name="dialog_characterIsDeadByEF">Muori, stroncato da troppe ferite. La tua avventura finisce qui.</string>
    <string name="dialog_characterIsDeadByEM">Cedi, prostrato da paura e fatica. La tua avventura finisce qui.</string>
    <string name="dialog_combatExitAlert">Ricordati di premere il pulsante per riportare i valori nella scheda</string>
    <string name="dialog_combatNotes">Per questo combattimento valgono regole speciali, che trovi nel testo. Ricordati di leggerle!</string>
    <string name="dialog_condActualEnergyGreater">Attenzione: il punteggio di Energia attuale sta superando quello iniziale. Sei sicuro?</string>
    <string name="dialog_condActualValueGreater">Attenzione: il punteggio di Abilità attuale sta superando quello iniziale. Sei sicuro?</string>
    <string name="dialog_condActualValueGreaterExt">Attenzione: il punteggio di %s attuale sta superando quello iniziale.</string>
    <string name="dialog_condBackpackOverloaded">Hai troppi oggetti nello zaino. Devi abbandonare l\'eccedenza o ripartirla diversamente, se possibile (ex: impugnando armi, riponendo Pasti nel tascapane…)</string>
    <string name="dialog_condChangeInitialEnergy">Attenzione: stai modificando un punteggio di Energia iniziale e non quello attuale. Sei sicuro?</string>
    <string name="dialog_condChangeInitialValue">Attenzione: stai modificando un punteggio di Abilità iniziale e non quello attuale. Sei sicuro?</string>
    <string name="dialog_condHaversackOverloaded">Hai troppi pasti nel tascapane. Riponi quelli in eccesso nello zaino, creando un oggetto \'Pasto\' per ciascuno</string>
    <string name="dialog_condPurseOverloaded">Hai troppi pezzi d\'Argento nel borsello. Riponi l\'eccedenza nello zaino, creando un singolo oggetto: \'Eccedenza pA\'</string>
    <string name="dialog_confirmItemRemoveMessage">Vuoi eliminare %s ?</string>
    <string name="dialog_confirmItemRemoveTitle">Rimuovi oggetto</string>
    <string name="dialog_confirmNewGameMessage">Vuoi iniziare una nuova partita?</string>
    <string name="dialog_confirmNewGameTitle">Nuova partita</string>
    <string name="dialog_confirmProfileRemoveMessage">Vuoi eliminare la partita %s ?</string>
    <string name="dialog_confirmProfileRemoveTitle">Elimina partita</string>
    <string name="dialog_createObjectTitle">Crea %s</string>
    <string name="dialog_dice1">1 dado</string>
    <string name="dialog_dice2">2 dadi</string>
    <string name="dialog_dice3">3 dadi</string>
    <string name="dialog_dice4">4 dadi</string>
    <string name="dialog_dictionaryEntryTitle">Glossario</string>
    <string name="dialog_enemyIsDead">Hai abbattuto il nemico! Puoi terminare il combattimento.</string>
    <string name="dialog_fastStartMenu">Menù</string>
    <string name="dialog_fastStartPlay">Gioca Subito</string>
    <string name="dialog_faststartTitle">Inizia Subito</string>
    <string name="dialog_goToChapterMessage">Scrivi il numero del paragrafo</string>
    <string name="dialog_goToChapterTitle">Scelta paragrafo</string>
    <string name="dialog_goToTransport1533">Scarica «Transport1533»</string>
    <string name="dialog_historyOptionTitle">Scegli un\'opzione</string>
    <string name="dialog_jumpChapter">Vai al paragrafo</string>
    <string name="dialog_jumpChapterTrack">Vai al paragrafo e riabilita traccia paragrafi</string>
    <string name="dialog_languageChange">La lingua verrà modificata al prossimo riavvio dell\'app. Le descrizioni degli oggetti che hai creato tu nella scheda del personaggio non saranno tradotte.</string>
    <string name="dialog_lblItemDescription">Descrizione</string>
    <string name="dialog_lblItemName">Nome</string>
    <string name="dialog_lblItemQuantity">Quantità</string>
    <string name="dialog_lblProfileAdd">Aggiungi partita</string>
    <string name="dialog_lblProfileList">Partite esistenti</string>
    <string name="dialog_lblProfileName">Nome della partita</string>
    <string name="dialog_lblProfileTemplate">Modello</string>
    <string name="dialog_modifyObjectTitle">Modifica %s</string>
    <string name="dialog_multiObjects">Hai già preso quest\'oggetto una volta.\nVuoi prenderlo di nuovo?</string>
    <string name="dialog_newProfile">Nuova Partita</string>
    <string name="dialog_noThanks">No, grazie</string>
    <string name="dialog_profileRenameTitle">Rinomina partita</string>
    <string name="dialog_profilesTitle">Partite</string>
    <string name="dialog_talentsTitle">Specialità</string>
    <string name="dialog_trimHistory">Elimina i paragrafi da qua in avanti</string>
    <string name="dialog_trimHistoryMsg">Vuoi cancellare i paragrafi visitati dopo il %s?</string>
    <string name="dialog_trimHistoryTitle">Elimina i paragrafi visitati</string>
    <string name="dialog_whatAppNotInstalled">WhatsApp non è installato nel dispositivo</string>
    <string name="dummy">...</string>
    <string name="enemyref_addNote">Fai click sul nome del nemico per iniziare il combattimento</string>
    <string name="enemyref_craft">Astuzia: %d</string>
    <string name="enemyref_damage">Danno: %d</string>
    <string name="enemyref_me">EM: %d</string>
    <string name="enemyref_pe">EF: %d</string>
    <string name="enemyref_protection">Protezione: %d</string>
    <string name="enemyref_valor">Valore: %d</string>
    <string name="error_actionmenu">Errore nel menu</string>
    <string name="error_combatManager">Errore nel Combat Manager</string>
    <string name="error_credits">Errore nei credits</string>
    <string name="error_dataElementNotFound">Paragrafo non trovato</string>
    <string name="error_dialog">Errore nel gestore della finestra di dialogo</string>
    <string name="error_fastStart">Errore nell\'avvio rapido</string>
    <string name="error_formattingChapter">Errore nella formattazione del paragrafo %s</string>
    <string name="error_glossary">Errore nel glossario</string>
    <string name="error_history">Errore nella history</string>
    <string name="error_historyAction">Errore nelle azioni history</string>
    <string name="error_http">Errore nelle chiamate HTTP</string>
    <string name="error_intro">Errore nell\'introduzione</string>
    <string name="error_invalidName">Nome non valido</string>
    <string name="error_main2">Errore nel menu esteso</string>
    <string name="error_mainmenu">Errore nel menu principale</string>
    <string name="error_navigator">Errore nel modulo di gioco</string>
    <string name="error_profile">Errore nelle partite caricate</string>
    <string name="error_recovery">Errore nel riavvio app</string>
    <string name="menu_changeDiceRoller1">Modifica dadi #1</string>
    <string name="menu_changeDiceRoller2">Modifica dadi #2</string>
    <string name="menu_credits">Crediti</string>
    <string name="menu_disabledHistory">Traccia paragrafi: NO</string>
    <string name="menu_exit">Esci dall\'app</string>
    <string name="menu_fastStart">Visualizza di nuovo avvio rapido</string>
    <string name="menu_glossary">Glossario</string>
    <string name="menu_goToChapter">Vai al paragrafo</string>
    <string name="menu_history">Paragrafi passati</string>
    <string name="menu_home">Pagina iniziale</string>
    <string name="menu_newGame">Inizia una nuova partita</string>
    <string name="menu_previousChapter">Paragrafo precedente</string>
    <string name="menu_rollDices">Lancia i dadi</string>
    <string name="menu_settings">Impostazioni</string>
    <string name="txt_Abilities">Abilità</string>
    <string name="txt_Armors">Armatura (max 1)</string>
    <string name="txt_Backpack">Zaino (max Valore X 2)</string>
    <string name="txt_Codes">Codici</string>
    <string name="txt_Craft">Astuzia</string>
    <string name="txt_Damage">Danno</string>
    <string name="txt_Energies">Energie</string>
    <string name="txt_Equipment">EQUIPAGGIAMENTO</string>
    <string name="txt_Experience">Esperienza</string>
    <string name="txt_Fate">Fato</string>
    <string name="txt_Food">Cibo (max 7 pasti)</string>
    <string name="txt_Gender">Genere</string>
    <string name="txt_Items">Oggetti</string>
    <string name="txt_Knowledge">Sapienza</string>
    <string name="txt_Male">Maschio</string>
    <string name="txt_MentalEnergy">EM</string>
    <string name="txt_Money">Pezzi d\'argento (max 120)</string>
    <string name="txt_Name">Nome</string>
    <string name="txt_NameHint">Nome del tuo personaggio</string>
    <string name="txt_No">No, grazie</string>
    <string name="txt_Notes">Note</string>
    <string name="txt_PhysicalEnergy">EF</string>
    <string name="txt_Placeholder">30</string>
    <string name="txt_Protection">Protezione</string>
    <string name="txt_Sheet">SCHEDA</string>
    <string name="txt_SpecialTalents">Specialità</string>
    <string name="txt_Valor">Valore</string>
    <string name="txt_Weapons">Armi (max 2)</string>
    <string name="txt_Yes">Si</string>
</resources>