<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ico_action_dicelayers"
        android:id="@+id/mnuNavigator_itmDiceRoller1"
        android:orderInCategory="10"
        android:title="@string/menu_rollDices"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ico_action_dicelayers"
        android:id="@+id/mnuNavigator_itmDiceRoller2"
        android:orderInCategory="20"
        android:title="@string/menu_rollDices"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ico_action_paragraph_search"
        android:id="@+id/mnuNavigator_itmGoChapter"
        android:orderInCategory="30"
        android:title="@string/menu_goToChapter"
        android:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ico_action_paragraph_previous"
        android:id="@+id/mnuNavigator_itmPreviousChapter"
        android:orderInCategory="40"
        android:title="@string/menu_previousChapter"
        android:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuMainMenu_itmGlossary"
        android:orderInCategory="50"
        android:title="@string/menu_glossary"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_action_map"
        android:id="@+id/mnuNavigator_itmEnableDisableHistory"
        android:orderInCategory="55"
        android:title="@string/menu_disabledHistory"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuNavigator_itmHistory"
        android:orderInCategory="60"
        android:title="@string/menu_history"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuNavigator_itmHome"
        android:orderInCategory="70"
        android:title="@string/menu_home"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ico_action_dice01"
        android:id="@+id/mnuNavigator_itmChangeRoller1"
        android:orderInCategory="90"
        android:title="@string/menu_changeDiceRoller1"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ico_action_dice01"
        android:id="@+id/mnuNavigator_itmChangeRoller2"
        android:orderInCategory="100"
        android:title="@string/menu_changeDiceRoller2"
        android:showAsAction="never"/>
</menu>
