<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuMainMenu_itmGlossary"
        android:orderInCategory="10"
        android:title="@string/menu_glossary"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuMainMenu_itmCredit"
        android:orderInCategory="20"
        android:title="@string/menu_credits"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuMainMenu_itmSettings"
        android:orderInCategory="30"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuMainMenu_itmNewGame"
        android:orderInCategory="40"
        android:title="@string/menu_newGame"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuMainMenu_itmFastStart"
        android:orderInCategory="50"
        android:title="@string/menu_fastStart"
        app:showAsAction="never" />
    <item
        android:icon="@drawable/ic_action_star"
        android:id="@+id/mnuMainMenu_itmExit"
        android:orderInCategory="70"
        android:title="@string/menu_exit"
        app:showAsAction="never" />
</menu>
