<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" style="@style/frgSheet.layout.main">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/frgSheet_layoutPadding"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout style="@style/frgSheet.layout.horizontal.margin">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblSheet"
                android:text="@string/txt_Sheet"
                style="@style/frgSheet.text.header.flanked"/>
            <ImageView
                android:contentDescription="@string/img"
                android:id="@+id/frgSheet_btnTime"
                android:src="@drawable/ico_timebar"
                style="@style/frgSheet.timeBar"/>
        </LinearLayout>
        <LinearLayout style="@style/frgSheet.layout.horizontal.margin">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblName"
                android:text="@string/txt_Name"
                style="@style/frgSheet.description"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_txtName"
                android:text="@string/txt_NameHint"
                style="@style/frgSheetText"/>
        </LinearLayout>
        <LinearLayout style="@style/frgSheet.layout.horizontal.margin">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblGender"
                android:text="@string/txt_Gender"
                style="@style/frgSheet.description"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_txtGender"
                android:text="@string/txt_Male"
                style="@style/frgSheetText"/>
        </LinearLayout>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblAbilities"
            android:text="@string/txt_Abilities"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout style="@style/frgSheetMultiValueOuterLayout">
            <LinearLayout
                android:id="@+id/frgSheet_layValor"
                style="@style/frgSheetMultiValueInnerLayout.Margin">
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_lblValor"
                    android:text="@string/txt_Valor"
                    style="@style/frgSheetValueTitle"/>
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_txtValor"
                    android:text="@string/txt_Placeholder"
                    style="@style/frgSheetValueNumber.Small"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/frgSheet_layKnowledge"
                style="@style/frgSheetMultiValueInnerLayout.Margin">
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_lblKnowledge"
                    android:text="@string/txt_Knowledge"
                    style="@style/frgSheetValueTitle"/>
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_txtKnowledge"
                    android:text="@string/txt_Placeholder"
                    style="@style/frgSheetValueNumber.Small"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/frgSheet_layCraft"
                style="@style/frgSheetMultiValueInnerLayout">
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_lblCraft"
                    android:text="@string/txt_Craft"
                    style="@style/frgSheetValueTitle"/>
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_txtCraft"
                    android:text="@string/txt_Placeholder"
                    style="@style/frgSheetValueNumber.Small"/>
            </LinearLayout>
        </LinearLayout>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblEnergies"
            android:text="@string/txt_Energies"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout style="@style/frgSheetMultiValueOuterLayout">
            <LinearLayout
                android:id="@+id/frgSheet_layPe"
                style="@style/frgSheetMultiValueInnerLayout.Margin">
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_lblPe"
                    android:text="@string/txt_PhysicalEnergy"
                    style="@style/frgSheetValueTitle"/>
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_txtPe"
                    android:text="@string/txt_Placeholder"
                    style="@style/frgSheetValueNumber.Small"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/frgSheet_layMe"
                style="@style/frgSheetMultiValueInnerLayout">
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_lblMe"
                    android:text="@string/txt_MentalEnergy"
                    style="@style/frgSheetValueTitle"/>
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_txtMe"
                    android:text="@string/txt_Placeholder"
                    style="@style/frgSheetValueNumber.Small"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frgSheet_layFate"
            style="@style/frgSheetValueLayout">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblFate"
                android:text="@string/txt_Fate"
                style="@style/frgSheetValueTitle"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_txtFate"
                android:text="@string/txt_Placeholder"
                style="@style/frgSheetValueNumber"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frgSheet_layExperience"
            style="@style/frgSheetValueLayout">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblExperience"
                android:text="@string/txt_Experience"
                style="@style/frgSheetValueTitle"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_txtExperience"
                android:text="@string/txt_Placeholder"
                style="@style/frgSheetValueNumber"/>
        </LinearLayout>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblTalents"
            android:text="@string/txt_SpecialTalents"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout
            android:id="@+id/frgSheet_layTalents"
            style="@style/frgSheetItemList"/>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblEquipment"
            android:text="@string/txt_Equipment"
            style="@style/frgSheet.text.header"/>
        <LinearLayout style="@style/frgSheetMultiValueOuterLayout">
            <LinearLayout
                android:id="@+id/frgSheet_layProtection"
                style="@style/frgSheetMultiValueInnerLayout.Margin">
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_lblProtection"
                    android:text="@string/txt_Protection"
                    style="@style/frgSheetValueTitle"/>
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_txtProtection"
                    android:text="@string/txt_Placeholder"
                    style="@style/frgSheetValueNumber.Small"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/frgSheet_layDamage"
                style="@style/frgSheetMultiValueInnerLayout">
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_lblDamage"
                    android:text="@string/txt_Damage"
                    style="@style/frgSheetValueTitle"/>
                <rpt.games.transport2147.utils.view.text.RPTextView
                    android:id="@+id/frgSheet_txtDamage"
                    android:text="@string/txt_Placeholder"
                    style="@style/frgSheetValueNumber.Small"/>
            </LinearLayout>
        </LinearLayout>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblWeapons"
            android:text="@string/txt_Weapons"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout
            android:id="@+id/frgSheet_layWeapons"
            style="@style/frgSheetItemList"/>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblArmor"
            android:text="@string/txt_Armors"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout
            android:id="@+id/frgSheet_layArmor"
            style="@style/frgSheetItemList"/>
        <LinearLayout
            android:id="@+id/frgSheet_layMoney"
            style="@style/frgSheetValueLayout">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblMoney"
                android:text="@string/txt_Money"
                style="@style/frgSheetValueTitle"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_txtMoney"
                android:text="@string/txt_Placeholder"
                style="@style/frgSheetValueNumber"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frgSheet_layFood"
            style="@style/frgSheetValueLayout">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblFood"
                android:text="@string/txt_Food"
                style="@style/frgSheetValueTitle"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_txtFood"
                android:text="@string/txt_Placeholder"
                style="@style/frgSheetValueNumber"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/frgSheet_layMaxItems"
            style="@style/frgSheetValueLayout">
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_lblmaxItems"
                android:text="@string/txt_Backpack"
                style="@style/frgSheetValueTitle"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/frgSheet_txtMaxItems"
                android:text="@string/txt_Placeholder"
                style="@style/frgSheetValueNumber"/>
        </LinearLayout>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblItems"
            android:text="@string/txt_Items"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout
            android:id="@+id/frgSheet_layItems"
            style="@style/frgSheetItemList"/>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblCodes"
            android:text="@string/txt_Codes"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout
            android:id="@+id/frgSheet_layCodes"
            style="@style/frgSheetItemList"/>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/frgSheet_lblNotes"
            android:text="@string/txt_Notes"
            style="@style/frgSheetItemListTitle"/>
        <LinearLayout
            android:id="@+id/frgSheet_layNotes"
            style="@style/frgSheetItemList"/>
    </LinearLayout>
</ScrollView>
