<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/dlg.mainLayout">
    <include layout="@layout/include_dialogtitle"/>
    <rpt.games.transport2147.utils.view.text.RPTextView
        android:id="@+id/dlgMultiObjects_lblText"
        android:text="@string/dialog_multiObjects"
        style="@style/dlg.text.center"/>
    <RadioGroup style="@style/dlg.radioGroupHorizontal">
        <rpt.games.transport2147.utils.view.radiobutton.RPRadioButton
            android:id="@+id/dlgMultiObjects_choiceYes"
            android:text="@string/txt_Yes"
            style="@style/dlg.radioButton"/>
        <rpt.games.transport2147.utils.view.radiobutton.RPRadioButton
            android:id="@+id/dlgMultiObjects_choiceNo"
            android:text="@string/txt_No"
            style="@style/dlg.radioButton"/>
    </RadioGroup>
    <LinearLayout
        android:id="@+id/dlgMultiobject_layValue"
        style="@style/dlg.valuelayoutHorizontal">
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/dlgMultiObjects_lblQuantity"
            android:text="@string/dialog_lblItemQuantity"
            style="@style/dlg.valueDescription"/>
        <ImageView
            android:id="@+id/dlgMultiobject_btnSubtract"
            style="@style/dlg.valueButton.base.minus"
            android:contentDescription="@string/img" />
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/dlgMultiobject_txtValue"
            style="@style/dlg.valueAmount"/>
        <ImageView
            android:contentDescription="@string/img"
            android:id="@+id/dlgMultiobject_btnAdd"
            style="@style/dlg.valueButton.base.plus"/>
    </LinearLayout>
    <include layout="@layout/include_dialogbuttonok"/>
</LinearLayout>
