<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" style="@style/actMain.layout.outer">
    <LinearLayout style="@style/actMain.layout.middle">
        <LinearLayout style="@style/actMain.layout.inner">
            <ImageView style="@style/actMain.image.title"
                android:contentDescription="@string/img"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_btnIntro"
                android:background="@drawable/main_btn_intro"
                android:text="@string/button_Intro"
                style="@style/actMain.item"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_btnTutorial"
                android:background="@drawable/main_btn_tutorial"
                android:text="@string/button_Tutorial"
                style="@style/actMain.item"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_btnProfiles"
                android:background="@drawable/main_btn_profiles"
                android:text="@string/button_Profiles"
                style="@style/actMain.item"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_lblProfile"
                style="@style/actMain.text.profile"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_txtProfile"
                style="@style/actMain.text.profile.red"/>
            <ImageView style="@style/actMain.image"
                android:contentDescription="@string/img"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_btnRules"
                android:background="@drawable/main_btn_sheet"
                android:text="@string/button_ModifySheet"
                style="@style/actMain.item"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_btnStart"
                android:background="@drawable/main_btn_play"
                android:text="@string/button_GoNavigator"
                style="@style/actMain.item"/>
            <rpt.games.transport2147.utils.view.text.RPTextView
                android:id="@+id/actMain_btnMain2"
                android:background="@drawable/main_btn_next"
                style="@style/actMain.navigation"/>
        </LinearLayout>
        <rpt.games.transport2147.utils.view.text.RPTextView
            android:id="@+id/actMain_txtVersion"
            style="@style/actMain.text.version"/>
    </LinearLayout>
</ScrollView>
